Added usg element to the headword section.

--- a/templates/lemma-template.xml
+++ b/templates/lemma-template.xml
@@ -27,6 +27,9 @@
 					<orth xml:lang="ro-x-accent-upcase-vowels" n="" />
 					<syll />
 					<pron />
+					<usg type="unknown" value="">
+						<pc />
+					</usg>					
 				</form>
 				<gramGrp>
 					<pos value="" />
